<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello Default Locale, Selendroid-test-app!</string>
    <string name="button">EN Button</string>
    <string name="app_name">Selendroid-test-app</string>
    <string name="search_hint">Search for users</string>
    <string name="welcomeRegisterUser">Welcome to register a new User</string>
    <string name="verifyNewUser">Register User (verify)</string>
    <string name="label_password">Password</string>
    <string name="label_username">Username</string>
    <string name="label_email">E-Mail</string>
    <string name="label_name">Name</string>
    <string name="label_preferedProgrammingLanguage">Programming Languge</string>
    <string name="prompt_preferedProgrammingLanguage">Programming Languge</string>
    <string name="prompt_webdriverHtmlTestFile">Webdriver Test File</string>
    <string name="label_acceptAdds">I accept adds</string>
    <string name="label_conditions">TandC</string>
</resources>
